# logind-idle-control

./: Cargo.toml  Makefile  README.md  SUMMARY.md  install.sh  logind-idle-control.spec  test-dbus-signal.sh  test-direct-monitor.sh  test-monitor.sh
config/: schema.json
src/: config.rs  dbus.rs  lib.rs  main.rs  session.rs  state.rs
systemd/: logind-idle-control.service
