[package]
name = "logind-idle-control"
version = "0.1.0"
edition = "2021"
authors = ["Mason Rhodes <mason@masonrhodes.dev>"]
license = "MIT"
description = "Systemd-logind idle inhibitor control with D-Bus interface"

[dependencies]
zbus = "4"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
nix = { version = "0.29", features = ["signal"] }
dirs = "5.0"
schema-tui = { git = "https://github.com/MasonRhodesDev/schema-tui.git" }
